# astronomy

./: .appveyor.yml  .azure-pipelines.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  ex8.cpp  ex8.hpp  example.cpp  example3.cpp
.ci/: build-and-test.sh  get-boost.sh
.ci/azure-pipelines/: steps-cmake-build-and-test.yml  steps-install-boost.yml
ci/appveyor/: cygwin-update.bat  install.bat  mingw.bat
ci/azure-pipelines/: install.bat
ci/travis/: install.sh
doc/tutorials/: index.md
doc/tutorials/coordinate/: astronomical_coordinate.md  astronomical_coordinate_operation.md  coordinate_conversion.md  coordinate_point.md  euclidean_coordinate.md  motion.md  vector_operation.md
include/boost/astronomy/coordinate/: alt_az.hpp  arithmetic.hpp  base_differential.hpp  base_ecliptic_frame.hpp  base_equatorial_frame.hpp  base_frame.hpp  base_representation.hpp  cartesian_differential.hpp  cartesian_representation.hpp  cirs.hpp  ex8.hpp  galactic.hpp  geocentric.hpp  heliocentric.hpp  icrs.hpp  sky_point.hpp  spherical_coslat_differential.hpp  spherical_differential.hpp  spherical_equatorial_differential.hpp  spherical_equatorial_representation.hpp  spherical_representation.hpp  supergalactic.hpp
include/boost/astronomy/detail/: is_base_template_of.hpp
include/boost/astronomy/exception/: fits_exception.hpp
include/boost/astronomy/io/: ascii_table.hpp  binary_table.hpp  bitpix.hpp  card.hpp  column.hpp  column_data.hpp  extension_hdu.hpp  fits.hpp  hdu.hpp  image.hpp  image_extension.hpp  primary_hdu.hpp  table_extension.hpp
include/boost/astronomy/units/: length.hpp
test/: CMakeLists.txt  Jamfile  differential.cpp  representation.cpp
test/coordinate/: CMakeLists.txt  Jamfile  cartesian_differential.cpp  cartesian_representation.cpp  differential.cpp  representation.cpp  spherical_differential.cpp  spherical_equatorial_differential.cpp  spherical_equatorial_representation.cpp  spherical_representation.cpp
test/header/: CMakeLists.txt  Jamfile  main.cpp
test/units/: CMakeLists.txt  Jamfile  length.cpp
